add email recipient name to template

--- a/santa_email.html
+++ b/santa_email.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Salainen Joulupukki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style type="text/css" rel="stylesheet" media="all">
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@@ -41,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tervehdys salainen tonttuilija! 🧑🏻‍🎄</h1>
+        <h1>Tervehdys salainen tonttuilija {{email_recipient_name}}! 🧑🏻‍🎄</h1>
         <p>Joulun taikaa on taas ilmassa, ja sen myötä on aika herätellä henkiin salaisen joulupukin perinne! Jos tämä
             riemukas leikki ei ole sinulle entuudestaan tuttu, niin kerrataanpa lyhyesti. Salaisessa joulupukissa ryhmä
             ihmisiä arpoo toisilleen lahjojen saajat anonyymisti. Se on mitä mainioin tapa levittää joulumieltä ja
@@ -57,7 +55,7 @@
         <p><strong>🎁 Merkitse pakettiin vain lahjansaajan nimi, ja lähettäjäksi vaikkapa "Joulupukki" tai jokin muu
             kekseliäs
             nimimerkki. Näin säilytät salaperäisyyden viimeiseen asti!</strong></p>
-        <p>Iloisia lahjahetkiä ja taianomaista joulunaikaa kaikille! 🎄</p>
+        <p>☃️ Iloisia lahjahetkiä ja taianomaista joulunaikaa kaikille! 🎄</p>
         <h3>Lahjaringissä mukana ovat:</h3>
         <ul>
             {{participants}}
